--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,47 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
-anyio==4.11.0
-beautifulsoup4==4.14.2
+anyio==4.12.0
+beautifulsoup4==4.14.3
+cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
-contourpy==1.3.3
-cryptography==46.0.3
 curl_cffi==0.13.0
-cycler==0.12.1
-dateutils==0.6.12
-dhanhq==2.0.2
-fastapi==0.122.0
-fonttools==4.60.1
+exchange_calendars==4.11.3
+fastapi==0.123.5
 frozendict==2.4.7
-gevent==25.9.1
-greenlet==3.2.4
 h11==0.16.0
 idna==3.11
-kiwisolver==1.4.9
-matplotlib==3.10.7
+korean-lunar-calendar==0.3.1
 multitasking==0.0.12
-nsetools==2.0.1
+nselib==1.9
+nsepython==2.97
 numpy==2.3.5
-packaging==25.0
 pandas==2.3.3
+pandas_market_calendars==5.1.3
 peewee==3.18.3
-pillow==12.0.0
 platformdirs==4.5.0
 protobuf==6.33.1
 pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
-pyOpenSSL==25.3.0
-pyparsing==3.2.5
+pyluach==2.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
+scipy==1.16.3
 six==1.17.0
-sniffio==1.3.1
 soupsieve==2.8
+sql_metadata==2.18.0
+sqlparse==0.5.3
 starlette==0.50.0
+toolz==1.1.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
-websocket-client==1.9.0
 websockets==15.0.1
 yfinance==0.2.66
-zope.event==6.1
-zope.interface==8.1.1
